--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 env/
-Backend/Gastos/__pycache__/
-Backend/Gastos/Credentials.json
-Backend/auth_gastos/__pycache__/
-Backend/auth_gastos/migrations/
-Backend/auth_gastos/models/__pycache__/
+Gastos/__pycache__/
+Gastos/Credentials.json
+auth_gastos/__pycache__/
+auth_gastos/migrations/
+auth_gastos/models/__pycache__/
+auth_gastos/serializers/__pycache__/
+auth_gastos/views/__pycache__/
