--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ auth_gastos/migrations/
 auth_gastos/models/__pycache__/
 auth_gastos/serializers/__pycache__/
 auth_gastos/views/__pycache__/
+Credentials.json
